changes in initializing tables, views, functions and co. & implementation of Todolist

--- a/server/postgres/Dockerfile.dev
+++ b/server/postgres/Dockerfile.dev
@@ -1,6 +1,9 @@
 FROM postgres:14
 
 ADD /tables/ /docker-entrypoint-initdb.d/tables/
+ADD /views/ /docker-entrypoint-initdb.d/views/
+ADD /functions/ /docker-entrypoint-initdb.d/functions/
+ADD /triggers/ /docker-entrypoint-initdb.d/triggers/
 ADD /seed/ /docker-entrypoint-initdb.d/seed/
 
 
