--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,8 @@ services:
       SERVER_PORT: ${SERVER_PORT} 
       POSTGRES_URI: ${POSTGRES_URI}
     volumes:
-      # - /app/node_modules
-      - ./server:/app
+      # - /code/node_modules
+      - ./server:/code
 
   # Client
   client:
@@ -52,8 +52,8 @@ services:
     ports:
       - 3000:3000
     volumes:
-      # - /app/node_modules
-      - ./client:/app
+      # - /code/node_modules
+      - ./client:/code
     environment:
       - CHOKIDAR_USEPOLLING=true
       - NODE_ENV=development
