--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -40,6 +40,7 @@ services:
       NODE_ENV: ${NODE_ENV}
       SERVER_PORT: ${SERVER_PORT} 
       POSTGRES_URI: ${POSTGRES_URI}
+      JWT_SECRET: ${JWT_SECRET}
     volumes:
       # - /code/node_modules
       - ./server:/code
